--- a/notebooks/model_evaluation.ipynb
+++ b/notebooks/model_evaluation.ipynb
@@ -192,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv2",
    "language": "python",
    "name": "python3"
   },
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
